 * determine ideal word size for sensitive search
 * determine ideal alignment coverage (currently at 0.75)
 * determine if sensitive settings chage the % unclassified in real datasets

IN PROGRESS

CHANGES

2015-10-25
 * fixed path to reference database. now path is relative to /scripts directory. path added to args from run_phylo_cnv.py
 * operating system now checked from run_phylo_cnv.py

2015-10-24
 * added pairwise_distances.py

2015-10-21
 * run_phylo_cnv.py: args['out'] created if not exists, args['all'] default, args['gc_cov'] == 3.0 default

2015-10-08
 * added annotate_snps.py
 * merge_snps.py: made more modular

2015-10-06
 * snvs.py: fixed path to filter_bam.py
 * added download_ref_db.py for easily downloading reference database
 * changed path to reference databases; remove -D as option

2015-09-17
 * renamed pangenome.py to cnvs.py
 * run_phylo_cnv.py: removed option '--cluster_pid'
 * run_phylo_cnv.py: fixed minor bug when parsing '--gc_id'
 * cnvs.py: no longer aggregating gene coverage
 * merge_genes.py: added option '--cluster_pid'
 * merge_genes.py: fixed option '--sample_list'
 * merge_genes.py: added reference genome profiles
 * run_phylo_cnv.py: added option '--remove_tmp'
 * snvs.py, cnvs.py: added support for '--remove' option

2015-09-08
 * fq_to_fa.py: no longer filtering reads with leading 'N'
 * updated binaries: bin/Linux/hs-blastn and bin/Darwin/hs-blastn 
   -reads from /dev/stdin without error
   -reads sequences composed of all Ns without error
 * updated database: phylo_db/marker_genes/hs-blastn*
 * removed binaries: bin/Linux/blastn and bin/Darwin/blastn
 * species.py: removed references to blastn
 * species.py: 'speed' argument: args['speed'] == fast now runs hs-blastn with word_size = 18
 * fq_to_fa.py: sequence ids now contain sequence length
 * species.py: added 0.75 query alignment coverage filter

2015-09-05
 * species.py: added option for cellular relative abundance, which requires running MicrobeCensus

2015-08-31